@@ -7,6 +7,7 @@ class Prawn::Font::AFM
     ?\u200b => '',
     ?\u202f => ?\u00a0,
     ?\u2009 => ' ',
+    ?\u2063 => ?\u00ad,
     ?\u25e6 => '-',
     ?\u25aa => ?\u00b7,
   }
